---
source: src/syntax/tests/mod.rs
expression: ir
---
; ModuleID = 'star'
source_filename = "star.ppl"

%Integer = type { ptr }
%String = type { ptr }

define void @star.execute() !dbg !3 {
  %1 = call %Integer @integer_from_i64(i64 2), !dbg !7
  %2 = call %Integer @integer_from_i64(i64 2), !dbg !8
  %3 = call %Integer @integer_from_i64(i64 2), !dbg !9
  %4 = call %Integer @integer_star_integer(%Integer %2, %Integer %3), !dbg !9
  %5 = call %Integer @integer_plus_integer(%Integer %1, %Integer %4), !dbg !9
  call void @"println <:Integer>"(%Integer %5), !dbg !9
  br label %return, !dbg !9

return:                                           ; preds = %0
  ret void
}

define void @"println <:Integer>"(%Integer %0) !dbg !10 {
  %x = alloca %Integer, align 8
  store %Integer %0, ptr %x, align 8
  %2 = load %Integer, ptr %x, align 8, !dbg !11
  %3 = call %String @integer_as_string(%Integer %2), !dbg !11
  call void @"println <:String>"(%String %3), !dbg !11
  br label %return, !dbg !11

return:                                           ; preds = %1
  ret void
}

declare void @"println <:String>"(%String)

declare %String @integer_as_string(%Integer)

declare %Integer @integer_plus_integer(%Integer, %Integer)

declare %Integer @integer_from_i64(i64)

declare %Integer @integer_star_integer(%Integer, %Integer)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "ppl", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false, sysroot: "/")
!2 = !DIFile(filename: "star.ppl", directory: ".")
!3 = distinct !DISubprogram(name: "star.execute", linkageName: "star.execute", scope: !2, file: !2, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DIBasicType(name: "i32", size: 32, encoding: DW_ATE_signed)
!7 = !DILocation(line: 0, column: 8, scope: !3)
!8 = !DILocation(line: 0, column: 12, scope: !3)
!9 = !DILocation(line: 0, column: 16, scope: !3)
!10 = distinct !DISubprogram(name: "println <:Integer>", linkageName: "println <:Integer>", scope: !3, file: !2, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!11 = !DILocation(line: 0, column: 17, scope: !10)
